--- a/cookie.html
+++ b/cookie.html
@@ -26,14 +26,14 @@ function getCookie(cname) {
 }
 
 function checkCookie() {
-  var user=getCookie("2021web");
+  var user=getCookie("username");
   console.log(user);
   if (user != "" ) {
     alert("また見てくれてありがとう！" + user);
   } else {
      user = prompt("はじめまして。名前を教えてください:","");
      if (user != "" && user != null) {
-       setCookie("2021web", user, 1);
+       setCookie("username", user, 1);
      }
   }
 }
